--- a/src/main/resources/templates/registrar_usuario.html
+++ b/src/main/resources/templates/registrar_usuario.html
@@ -41,7 +41,7 @@
                         <input name="foto" accept="image/*" required type="file" class="form-control-file" id="exampleFormControlFile1">
                     </div>
                     <div class="form-group text-center">
-                        <a class="btn btn-secondary mr-2" href="/">Atrás</a>
+                        <a class="btn btn-secondary mr-2" href="/">Ir al Login</a>
                         <button class="btn btn-primary" type="submit">Registrar</button>
                     </div>
                 </form>
